# book-api-cli

./: .gitignore  LICENSE  README-PyPI.md  README.md  books.py  config.py  exceptions.py  google_books_cli.py  pyproject.toml  requirements.txt  user.py
.github/workflows/: python-package.yml
yourbooks/: .env-template  __init__.py  __main__.py  books.py  config.py  exceptions.py  user.py
